# FusionLLM

./: .gitignore  .graphifyignore  .opencode-write-probe.md  AGENTS.md  EXECUTIVE_SUMMARY.md  FINAL_FROZEN_SPEC.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_REPORT.md  LICENSE  README.md  SKILLS.md  TECHNICAL_AUDIT.md  TEST_PLAN.md  UPGRADE_PLAN.md  instruction.md  pyproject.toml  requirements.txt  study_sources.md  upgrade.sh
.graphify/: config.ini
benchmarks/: __init__.py  benchmark_compile.py  benchmark_delta_rule.py  benchmark_moe.py  benchmark_moe_vectorized.py  benchmark_training.py
configs/: pretrain.yaml  smoke_pretrain.yaml
data/: DATA_PIPELINE.md  __init__.py  async_loader.py  common.py  curriculum.py  data_config.yaml  dedup.py  prepare_data.py  shard_writer.py
data/config/: mixture.yaml  tokenizer.yaml
data/scripts/: __init__.py  download_raw.py  preprocess.py  shard_writer.py  streaming_dataloader.py  tokenize.py  train_tokenizer.py
docs/: 01_PROJECT_OVERVIEW.md  02_ARCHITECTURE.md  03_TRAINING_PIPELINE.md  04_DISTRIBUTED_SYSTEM.md  05_CONFIGURATION_REFERENCE.md  06_MEMORY_AND_PERFORMANCE.md  07_RISKS_AND_TECHNICAL_DEBT.md  08_AGENT_PLAYBOOK.md  09_CODEBASE_MAP.md  10_RESEARCH_ROADMAP.md  11_GLOSSARY.md  12_DECISION_LOG.md  2026-07-15-fusionllm-training-stability-fixes.md  2026-07-16-fusionllm-implementation.md  AGENT_BOOTSTRAP.md  AGENT_CONTEXT.md  AUDIT_REPORT.md  DEPENDENCY_GRAPH.md  DISTRIBUTED_SCALING.md  FUSIONLLM_V2_ARCHITECTURE.md  MEMORY_OPTIMIZATION.md  MIGRATION_PLAN.md  MODULARIZATION_PLAN.md  MODULARIZATION_REPORT.md  MONITORING_GUIDE.md  PERFORMANCE_REFACTOR.md  PHASE1_IMPLEMENTATION.md  PHASE2A_IMPLEMENTATION.md  PHASE2_IMPLEMENTATION.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PUBLIC_API.md  REPOSITORY_INDEX.md  SIMPLIFICATION_AUDIT.md  TRAINING_READINESS_AUDIT.md  TRAINING_STABILITY_PLAN.md  fusionllm-architecture.md
documentation/: README.md  architecture.md  data_pipeline.md  fusionllm.md  gdn.md  mla.md  moe.md  mtp.md  training.md  utils.md
eval/: __init__.py  eval_core.py  run_lm_eval.py
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
graphify-out/obsidian/: $schema.md  .active().md  .add().md  .advance().md  .candidates().md  .check_activations().md  .clear_activations().md  .compile_for_inference().md  .compute_mtp_loss().md  .compute_z_loss().md  .delete_checkpoint().md  .epoch_order().md  .extend_to().md  .extra_repr().md  .finish().md  .forward().md  .forward()_1.md  .forward()_10.md  .forward()_11.md  .forward()_12.md  .forward()_13.md  .forward()_14.md  .forward()_15.md  .forward()_16.md  .forward()_17.md  .forward()_18.md  .forward()_19.md  .forward()_2.md  .forward()_3.md  .forward()_4.md  .forward()_5.md  .forward()_6.md  .forward()_7.md  .forward()_8.md  .forward()_9.md  .forward_with_hidden().md  .from_bytes().md  .get_activations().md  .get_batch_size().md  .get_compiled_submodules().md  (+880 more)
graphify-out/obsidian/.obsidian/: graph.json
kernels/: ce_softcap.py  delta_rule.py  flash_attn.py  linear_relu2.py
models/: __init__.py  fusionllm.py  gated_deltanet.py  gdn.py  mamba.py  mla.py  moe.py  mole.py  mtp.py  mup.py  rope.py  transformer.py
models/moe/: __init__.py  dispatch.py  experts.py  moe.py  routing.py
ops/triton/: grouped_gemm.py
scripts/: bench_mla.py  run_pretrain_runpod_8xa100.sh  run_smoke.sh  run_smoke_8xa100.sh
tests/: __init__.py  conftest.py  test_async_loader.py  test_ce_softcap.py  test_checkpoint.py  test_convergence.py  test_curriculum.py  test_curriculum_integration.py  test_dedup.py  test_distributed.py  test_e2e_training.py  test_eval.py  test_flash_attn.py  test_fsdp_resume.py  test_gdn.py  test_linear_relu2.py  test_loader.py  test_logging.py  test_loss.py  test_mamba.py  test_mla.py  test_moe.py  test_moe_gemm.py  test_mole.py  test_mtp.py  test_muon.py  test_mup.py  test_normuon.py  test_numerical_health.py  test_phase1_optimizations.py  test_phase2a_reliability.py  test_pipeline_smoke.py  test_prepare_data.py  test_rope.py  test_runs_csv.py  test_schedules.py  test_smoke.py  test_softcap.py  test_transformer.py  test_wsd.py
training/: __init__.py  benchmark.py  checkpoint.py  checkpointing.py  configs.py  curriculum_manager.py  data_loader.py  dataset.py  loss.py  normuon.py  numerical_health.py  optimization.py  optimizer.py  pretrain.py  scheduler.py  schedules.py  train_step.py  trainer.py  validation.py  wsd.py
utils/: __init__.py  compile.py  device_setup.py  distributed.py  logging.py  memory_profiler.py  nccl_profiler.py  tensor_checks.py
utils/checkpoint/: __init__.py  async_worker.py  atomic.py  manager.py  metadata.py  retention.py
