[project]
name = "fusionllm"
version = "0.0.0"
description = "FusionLLM: Hybrid MLA + GDN + MoE + MTP pre-training (FSDP2-only)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "FusionLLM contributors" }]
license = { text = "Apache-2.0" }

dependencies = [
    # Core
    "torch==2.7.0",
    "transformers>=4.51.0,<5.0.0",
    "datasets>=3.0.0",
    "safetensors>=0.4.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "numpy>=1.24.0",
    # Tokenizer (the only tokenizer-specific dep we need; users may swap)
    "tokenizers>=0.20.0",
    # Logging
    "wandb>=0.17.0",
    "mlflow>=2.16.0",
]

[project.optional-dependencies]
# Full-attention kernel — opt-in to keep CPU smoke tests light
flash = [
    "flash-attn==3.0.0b1",
]
# Triton kernels (GDN, fused CE+softcap, fused Linear+ReLU²) — opt-in
kernels = [
    "triton==3.2.0",
]
# Evaluation (lm-eval-harness, IFEval, etc.) — opt-in
eval = [
    "lm-eval==0.4.5",
    "bitsandbytes==0.45.0",
]
# Inference (vLLM for eval-time generation) — opt-in
inference = [
    "vllm==0.7.2",
]
# Quantized teachers for on-policy distillation
distill = [
    "bitsandbytes==0.45.0",
]

# Test extras
test = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-benchmark>=4.0.0",
]

# Lint / format / type-check extras
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "build>=1.2.0",
    "wheel>=0.43.0",
]

# The "everything" extra — used by the Dockerfile and CI to keep lockfiles
# aligned with the canonical profile. Not recommended for end users.
all = [
    "fusionllm[flash,kernels,eval,inference,distill,test,dev]",
]

[project.urls]
Repository = "https://github.com/atandra2000/FusionLLM"
Issues = "https://github.com/atandra2000/FusionLLM/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["models", "training", "data", "utils", "kernels", "eval"]

# ── Tooling: ruff ──────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    ".venv",
    "build",
    "dist",
    "graphify-out",
]

[tool.ruff.lint]
# Project policy: keep the rule set conservative while we still have a
# FSDP2-only single-machine codebase. Add rules as the codebase grows.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (we use formatter; long lines are OK in numeric configs)
    "B008",  # function call in default argument (we use this idiom in MLA)
    # Pre-existing code paths trigger these — the per-file-ignores
    # block below picks them up file-by-file.
    "F401",  # imported but unused (pre-existing re-exports)
    "B007",  # loop variable not used (pre-existing)
    "B905",  # zip() without strict= (pre-existing)
    "C408",  # unnecessary dict() call (pre-existing)
    "E722",  # bare except (pre-existing — review in Phase 8)
    "F821",  # undefined name (pre-existing — main_loss in pretrain.py:543)
    "F841",  # local variable assigned but never used (pre-existing)
    "W291",  # trailing whitespace (pre-existing)
    "W293",  # blank line contains whitespace (pre-existing)
    "UP035", # `typing.List/Dict/Tuple` deprecated in 3.9+ (Phase 1 typing; revisit in 3.12 cleanup)
    "E741",  # ambiguous variable name `l` (Vose alias method, intentional)
    "C401",  # unnecessary generator (set comprehension) (style, non-fatal)
]

[tool.ruff.lint.per-file-ignores]
# Tests are allowed to be a bit looser
"tests/**/*.py" = ["B011"]
# Scripts are entry points, not library code
"scripts/**/*.py" = ["E402", "B007"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ── Tooling: mypy ──────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
plugins = []
exclude = [
    ".venv",
    "build",
    "dist",
    "graphify-out",
    "tests/benchmarks/",
]

# ── Tooling: pytest ────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "gpu: tests that require a CUDA device (deselect with '-m \"not gpu\"')",
    "slow: tests that take more than a few seconds",
    "benchmark: performance benchmarks (run with --benchmark-only)",
    "distributed: tests that require multi-GPU FSDP2",
]
filterwarnings = [
    "error",
    # Third-party deprecations we cannot fix locally
    "ignore::DeprecationWarning:transformers.*",
    "ignore::DeprecationWarning:torch.*",
    "ignore::PendingDeprecationWarning",
]
