[project]
name = "fusionllm"
version = "1.0.0"
description = "FusionLLM-v1: Hybrid MLA + GDN + MoE + MTP pre-training (single GPU, pure PyTorch)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "FusionLLM contributors" }]
license = { text = "Apache-2.0" }

dependencies = [
    # Core
    "torch>=2.5.0",
    "safetensors>=0.4.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "numpy>=1.24.0",
    # Logging
    "wandb>=0.17.0",
    # Data pipeline
    "datasets>=2.14.0",
    "sentencepiece>=0.2.0",
    "zstandard>=0.21.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
]
dev = [
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
]
data = [
    # Convenience extra: full set needed to run the data pipeline.
    "datasets>=2.14.0",
    "sentencepiece>=0.2.0",
    "zstandard>=0.21.0",
]
optim = [
    # Flash Attention 2 for 40-50% faster attention (requires CUDA 12.x, A100 GPU)
    "flash-attn>=2.5.0",
]

[project.urls]
Repository = "https://github.com/atandra2000/FusionLLM"
Issues = "https://github.com/atandra2000/FusionLLM/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["models", "training", "utils", "data"]

# ── Tooling: ruff ──────────────────────────────────────────────────────────
[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Tooling: pytest ────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "gpu: tests that require a CUDA device (deselect with '-m \"not gpu\"')",
    "slow: tests that take more than a few seconds",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:torch.*",
    "ignore::FutureWarning",
    "ignore::UserWarning",
]
